# AIKnowledgeBase

./: .gitattributes  .gitignore  LICENSE  README.md
KB01-Mathmatics/: CH02-LinearAlgebra.md  CH03-AnalyticGeometry.md  CH04-MatrixDecompositions.md  CH05-VectorCalculus.md  CH06-ProbabilityAndDistribution.md  CH07-ContinuousOptimization.md  CH08-WhenModelsMeetData.md  README.md
KB02-MachineLearning/: README.md
KB02-MachineLearning/OtherAlgos/: LinearProgramming.md
KB02-MachineLearning/StatisticalLearningMethods/: CH01-统计学习及监督学习概论.md  CH04-朴素贝叶斯算法.md  README.md
KB02-MachineLearning/TimeSeriesForecastingAlgos/: ARIMA.md  GBDT.md  XGBoost.md  时序问题预测算法总结.md
KB03-DeepLearning/: CNN相关的神经网络模型总结.md  README.md  RNN相关的神经网络模型总结.md
KB03-DeepLearning/DeepLearningPrime/: 深度学习入门-笔记1.md  深度学习入门-笔记2.md
KB03-DeepLearning/LeeDLNotes/: ch02_实践方法论.md  ch03_深度学习基础.md  ch04_卷积神经网络.md  ch05_循环神经网络.md
KB04-LLM/: LangChain.md
KB04-LLM/BuildLLMFromScratch/: README.md  ch02_WorkingWithTextData.md  ch03_CodingAttentionMechanisms.md  ch04_ImplementingAGPTModel.md  ch05_PretrainingOnUnlabeledData.md  ch06_FinetuningForClassification.md  ch07_FinetuningToFollowInstructions.md  pyproject.toml
KB04-LLM/BuildLLMFromScratch/src/: common_layers.py  gpt_model.py  main.py  self_attention_layers.py
KB05-AISystem/: TensorRT.md
KB05-AISystem/AISystem/: 三(AI编译原理)-1.传统编译器.md  二(AI芯片体系结构)-1.AI计算体系.md  二(AI芯片体系结构)-2.AI芯片基础.md  四(AI推理系统)-1.推理系统介绍.md
KB05-AISystem/CUDA编程/: CUDA编程.md
